# WaveShare-Raspberry-Pi-Pico-Sensor-Kit

./: LICENSE  README.md
adc_sensor/: CMakeLists.txt  README.md  adc_sensor.c
color_sensor/: CMakeLists.txt  README.md  color_sensor.c
dht11/: CMakeLists.txt  README.md  dht11.c
rotation_Sensor/: CMakeLists.txt  README.md  rotation.c
switch_sensor/: CMakeLists.txt  README.md  switch_sensor.c
